--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "unused": true,
 	"eqeqeq": true,
 	"quotmark": true,
-	"nonew": true
+	"nonew": true,
+	"indent": true,
+	"latedef": true,
+	"noarg": true,
+	"node": true
   }
 }
