run in container, use recent compiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: node_js
+sudo: false
+addons:
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - gcc-4.8
+            - g++-4.8
+before_install:
+    - export CXX="g++-4.8" CC="gcc-4.8"
 node_js:
   - "0.12"
   - "0.11"
