--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "child_pty",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "provides a child_process.spawn()-like interface with pty support.",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "keywords": [
     "pty",
+    "tty",
     "terminal"
   ],
   "bugs": {
