--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "extend": "^3.0.0",
-    "nan": "^2.4.0",
-    "termios": "^0.1.1"
+    "nan": "^2.4.0"
   },
   "gypfile": true,
   "devDependencies": {
